--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon.8b2f57bf.png" type="image/png">
-    <link rel="stylesheet" href="/index.971c2ea4.css">
-    <script src="/index.a56319bd.js" defer=""></script>
-    <title>Parcel workflow</title>
-  </head>
-
-  <body>
-    <h1 id="start"></h1>
-    <img src="/start.6a3bf546.jpg" alt="Start picture">
-    <p>
-      Parcel assembly for automating workflows during project development.
-    </p>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="icon" href="favicon.4f4ff036.png" type="image/png"><link rel="stylesheet" href="index.645032fb.css"><script type="module" src="index.d6d829a5.js" defer></script><script src="index.fbd104ad.js" defer nomodule=""></script><title>Parcel workflow</title></head><body> <h1 id="start"></h1> <img src="start.4640d04f.jpg" alt="Start picture"> <p> Parcel assembly for automating workflows during project development. </p> </body></html>
